# prompted

./: .gitignore  README.md  pyproject.toml  test.py
abstractions/: test_1.py
chatspec/: __init__.py  _main.py  a2a.py  logger.py  markdown.py  mcp.py  messages.py  mock.py  params.py  state.py  types.py  utils.py
chatspec/_utils/: __init__.py  fn.py
deprecated/chatspec/: __init__.py  mock.py
deprecated/chatspec/_client/: __init__.py  deps.py
deprecated/chatspec/_create/: __init__.py
deprecated/chatspec/_utils/: cls.py
deprecated/tests/: test_markdown.py  test_mock.py
prompted/: __init__.py  _cache.py  create.py  logger.py  mcp.py  messages.py
prompted/_common/: __init__.py  cache.py  console.py  logger.py  service.py
prompted/_lib/: __init__.py  cache.py  logger.py  service.py
prompted/agents/: agent.py
prompted/base/: __init__.py  specification.py
prompted/common/: __init__.py  cache.py  logger.py
prompted/mcp/: __init__.py
prompted/messages/: __init__.py  content.py
prompted/resources/: __init__.py
prompted/resources/specifications/: __init__.py
prompted/resources/specifications/openai/: __init__.py
prompted/resources/specifications/openai/types/: __init__.py  embeddings.py  messages.py  responses.py  tool_calls.py  tools.py
prompted/resources/utils/: __init__.py  markdown.py  pydantic_models.py
prompted/schema/: __init__.py
prompted/specification/: __init__.py
prompted/specification/openai/: __init__.py
prompted/specification/openai/types/: __init__.py  embeddings.py  messages.py
prompted/specifications/: __init__.py
prompted/specifications/openai/: __init__.py  embeddings.py  messages.py  responses.py  tools.py  types.py
prompted/specifications/openai/types/: __init__.py  embeddings.py  messages.py  responses.py  tool_calls.py  tools.py
prompted/tools/: __init__.py
prompted/types/: __init__.py  chat_completions_params.py  history.py  instructions.py  instructor.py  result.py  run.py  shared.py  tool_call.py
prompted/types/completions/: messages.py  params.py  responses.py  tools.py
prompted/types/content/: __init__.py  audio.py  base.py  content.py  file.py  image.py  refusal.py  text.py
prompted/types/message/: __init__.py  assistant.py  base.py  message.py  system.py  user.py
prompted/types/openai/: __init__.py  embeddings.py  messages.py  responses.py  tool_calls.py  tools.py
prompted/types/tool/: __init__.py  api.py  base.py  function.py  generative.py  tool.py
prompted/util/: __init__.py  markdown.py  pydantic_models.py
prompted/util/converters/: __init__.py  pydantic_models.py
prompted/util/formatting/: __init__.py  markdown.py
prompted/utils/: __init__.py  converters.py  formatting.py  identification.py  mock.py  streaming.py
samples/: agent.py
tests/: test_lib_logging_cache.py  test_lib_service.py  test_messages_content.py  test_mock.py  test_state.py  test_utils.py  test_utils_converters.py
