[project]
name = "prompted"
version = "0.0.13"
description = "🌱 prompted - Tiny & Rapid LLM/Agentic Prototyping"
authors = [{ name = "Hammad Saeed", email = "hvmmad@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "cachetools>=5.5.2",
    "docstring-parser>=0.16",
    "instructor>=1.8.2",
    "jiter>=0.8.2",
    "litellm>=1.70.2",
    "sqlmodel>=0.0.24",
    "typing-inspect>=0.9.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.9.0",
]
a2a = [
    "fasta2a"
]

[dependency-groups]
dev = [
    # core dev tools
    # i love astral.sh
    "ruff",
    "uv",
    "rich", 
    "twine",
    "pytest",
    "pytest-asyncio",
    "ipykernel",
    "ipython",
    "mcp>=1.9.0",
    "fasta2a",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Ruff Rules
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py37"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
]
ignore = [
  # mutable defaults
  "B006",
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["openai", "tests"]

[tool.ruff.lint.per-file-ignores]
"bin/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203"]
"examples/**.py" = ["T201", "T203"]
